third_party/rust/paste/tests/ui/invalid-ident.stderr
error: expected identifier, found `0f`
 --> tests/ui/invalid-ident.rs:3:1
  |
3 | / paste! {
4 | |     fn [<0 f>]() {}
5 | | }
  | |_^ expected identifier
  |
  = note: this error originates in the macro `paste` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `"f\""` is not a valid identifier
 --> tests/ui/invalid-ident.rs:8:8
  |
8 |     fn [<f '"'>]() {}
  |        ^^^^^^^^^

error: `"f'"` is not a valid identifier
  --> tests/ui/invalid-ident.rs:12:8
   |
12 |     fn [<f "'">]() {}
   |        ^^^^^^^^^
